<resources>
    <string name="app_name">ThermoTiger</string>
    <string name="status_header">Status:</string>
    <string name="settings_header">Settings:</string>
    <string name="up_button">Up</string>
    <string name="down_button">Down</string>
    <string name="logo_desc">United Electronics</string>
    <string name="status_activity_label">Status</string>
    <string name="op_mode_header">Operation Mode:</string>
    <string name="fan_mode_header">Fan Mode:</string>
    <string name="heat_mode">Heat</string>
    <string name="cool_mode">Cool</string>
    <string name="menu_view_schedule">View Schedule</string>
	<string name="menu_about">About ClimateController</string>
	<string name="menu_new_day">Edit Day</string>
	<string name="about_info">ClimateController\nVersion: 0.1\n\nUnited Electronics\nCEO: Peter Weigel\nCTO: Tyler Kenney</string>
	<string name="menu_status">Status</string>
	<string name="sun_label">Sunday:</string>
	<string name="mon_label">Monday:</string>
	<string name="tues_label">Tuesday:</string>
	<string name="weds_label">Wednesday:</string>
	<string name="thurs_label">Thursday:</string>
	<string name="fri_label">Friday:</string>
	<string name="sat_label">Saturday:</string>
	<string name="create_day_title"><u>Edit Day</u></string>
	<string name="name_label">Name:</string>
	<string name="num_periods_label">Number of Periods:</string>
	<string name="name_hint">Name</string>
	<string name="done_button">Done</string>
	<string name="num_periods_header">#</string>
	<string name="start_time_header">Start\nTime</string>
	<string name="end_time_header">End\nTime</string>
	<string name="set_point_header">Set\nPoint</string>
	<string name="op_mode_table_header">Operation\nMode</string>
	<string name="fan_mode_table_header">Fan\nMode</string>
	<string name="schedule_dialog_msg">**Click and Hold a Day to View its Details</string>
	<string name="status_label">Status</string>
	<string name="schedule_label">Weekly Schedule</string>
	<string name="edit_day_label">Edit Day</string>
	<string name="cc_logo_desc">Climate Controller Logo</string>
	<string name="loading">Loading…</string>
	<string name="menu_refresh">Refresh</string>
	<string name="hold">Hold: </string>
	<string name="menu_reset">Reset to Default Schedule</string>
	<string name="menu_delete">Delete</string>
</resources>