<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
   <item android:id="@+id/menu_refresh"
        android:title="@string/menu_refresh"
        android:icon="@drawable/ic_menu_refresh"
        android:showAsAction="always" 
        android:visible="false"
        />
  <item
  	android:id="@+id/menu_delete"
  	android:title="@string/menu_delete"
  	android:icon="@drawable/ic_menu_delete"
  	android:showAsAction="ifRoom"
  	/>
  <item
  	android:id="@+id/menu_status"
  	android:title="@string/menu_status"
  	android:icon="@drawable/ic_menu_notifications"
  	android:showAsAction="ifRoom"
  	/>
  <item
  	android:id="@+id/menu_view_schedule"
  	android:title="@string/menu_view_schedule"
  	android:icon="@drawable/ic_menu_today"
  	android:showAsAction="ifRoom"
  	/>
  <item
  	android:id="@+id/menu_about"
  	android:title="@string/menu_about"
  	android:icon="@drawable/ic_menu_info_details"
  	android:showAsAction="never"
  	/>
  
</menu>
