<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@color/WHITE"
    android:padding="4dp"
    >
<!--     <TextView -->
<!-- 		android:id="@+id/screenTitle" -->
<!-- 		android:layout_width="match_parent" -->
<!-- 		android:layout_height="wrap_content" -->
<!-- 		android:gravity="center" -->
<!-- 		android:textStyle="bold" -->
<!-- 		android:textColor="@color/UE_LIGHT_BLUE" -->
<!-- 		android:textSize="40sp"	 -->
<!-- 		android:layout_alignParentTop="true" -->
<!-- 		android:text="@string/create_day_title" -->
<!-- 	/> -->
    <RelativeLayout 
	    android:id="@+id/createDayLayout"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:gravity="center_vertical"
	    android:layout_alignParentTop="true"
		android:layout_above="@+id/doneButton"
	    >  
	    <TextView 
	        android:id="@+id/nameLabel"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:layout_alignParentTop="true"
	        android:layout_alignParentLeft="true"
	        android:layout_alignBottom="@+id/nameEditText"
	        android:gravity="center"
	        android:textColor="@color/BLACK"
	        android:textSize="20sp"
	        android:text="@string/name_label"
	    />
	    <EditText 
	        android:id="@id/nameEditText"
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
	        android:layout_toRightOf="@+id/numPeriodsLabel"
	        android:layout_alignParentTop="true"
	        android:gravity="center"
	        android:textColor="@color/BLACK"
	        android:textSize="20sp"
	        android:layout_marginLeft="5dp"
	        android:inputType="textCapWords"
	        android:hint="@string/name_hint"
	    />
	    <TextView 
	        android:id="@id/numPeriodsLabel"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@id/nameLabel"
	        android:layout_alignBottom="@+id/numPeriodsLayout"
	        android:layout_alignTop="@id/numPeriodsLayout"
	        android:gravity="center"
	        android:textColor="@color/BLACK"
	        android:textSize="20sp"
	        android:text="@string/num_periods_label"

	    />
	    <RelativeLayout 
		    android:id="@id/numPeriodsLayout"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_below="@id/nameEditText"
		    android:layout_alignLeft="@id/nameEditText"
		    android:layout_alignRight="@id/nameEditText"
		    android:layout_marginTop="5dp"
	    >
			<Button 
			    android:id="@+id/upButton"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_centerHorizontal="true"
			    android:layout_alignParentTop="true"
			    android:background="@drawable/button_up_states"
			/>
			<TextView
			    android:id="@+id/numPeriods"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_below="@id/upButton"
			    android:layout_marginTop="3dp"
			    android:textColor="@color/BLACK"
			    android:textSize="17sp"
			    android:layout_centerHorizontal="true"
			/>
			<Button
			    android:id="@+id/downButton"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_below="@id/numPeriods"
			    android:layout_marginTop="3dp"
			    android:layout_centerHorizontal="true"
			    android:background="@drawable/button_down_states"
			/>
		</RelativeLayout>
		<ScrollView 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:scrollbars="horizontal|vertical"
		    android:layout_below="@id/numPeriodsLayout"
		    android:layout_centerInParent="true"
		    >
		<TableLayout 
		    android:id="@+id/tableLayout"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_margin="2dp"
		    >
		    <TableRow 
			    android:layout_width="match_parent"
			    android:layout_height="match_parent" 
		    	>
				<TextView 
				    android:id="@+id/periodNumHeader"
				    android:layout_width="wrap_content"
				    android:layout_height="match_parent"
				    android:text="@string/num_periods_header"
				    android:gravity="center"
				/>
				<TextView
				    android:id="@+id/startTimeHeader"
				    android:layout_width="wrap_content"
				    android:layout_height="match_parent"
					android:layout_marginLeft="2dp"
					android:text="@string/start_time_header"
					android:gravity="center"
				/>    
				<TextView
				    android:id="@+id/setPointHeader"
				    android:layout_width="wrap_content"
				    android:layout_height="match_parent"
					android:layout_marginLeft="2dp"
					android:text="@string/set_point_header"
					android:gravity="center"
				/>    
				<TextView
				    android:id="@+id/opModeHeader"
				    android:layout_width="wrap_content"
				    android:layout_height="match_parent"
					android:layout_marginLeft="2dp"
					android:text="@string/op_mode_table_header"
					android:gravity="center"
				/>    
				<TextView
				    android:id="@+id/fanModeHeader"
				    android:layout_width="wrap_content"
				    android:layout_height="match_parent"
					android:layout_marginLeft="2dp"
					android:text="@string/fan_mode_table_header"
					android:gravity="center"
				/>
			</TableRow>
		</TableLayout>
		</ScrollView>
	</RelativeLayout>
    <ImageView
	    android:id="@+id/ue_logo"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:src="@drawable/ue_logo"
		android:layout_alignParentBottom="true"
		android:layout_alignParentLeft="true"
		android:layout_alignTop="@id/doneButton"
		android:contentDescription="@string/logo_desc"
	/>
    <Button 
        android:id="@id/doneButton"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/done_button"
    />
</RelativeLayout>