<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@color/WHITE"
    android:padding="8dp"
    >
    <TextView
		android:id="@+id/zoneTitle"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:textStyle="bold"
		android:textColor="@color/UE_LIGHT_BLUE"
		android:textSize="40sp"	
		android:layout_alignParentTop="true"
	/>
	<RelativeLayout 
	    android:id="@+id/scheduleLayout"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:gravity="center"
	    android:layout_below="@id/zoneTitle"
		android:layout_above="@+id/ue_logo"
	    >  
	    <TextView 
	        android:id="@+id/sundayTV"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:layout_alignParentTop="true"
	        android:layout_alignParentLeft="true"
	        android:layout_alignBottom="@+id/sundayButton"
	        android:gravity="center"
	        android:textColor="@color/BLACK"
	        android:textSize="20sp"
	        android:text="@string/sun_label"
	    />
	    <Button 
	        android:id="@id/sundayButton"
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
	        android:layout_alignParentTop="true"
	        android:layout_toRightOf="@id/sundayTV"
			android:gravity="center"
	        android:textColor="@color/BLACK"
	        android:textSize="20sp"
	        android:layout_alignLeft="@+id/wedsButton"
    	/>
    	<TextView 
	    	android:id="@+id/mondayTV"
	    	android:layout_height="wrap_content"
	    	android:layout_width="wrap_content"
	    	android:layout_below="@id/sundayTV"
	    	android:layout_alignParentLeft="true"
	    	android:layout_alignBottom="@+id/mondayButton"
	    	android:textColor="@color/BLACK"
	    	android:textSize="20sp"
	    	android:text="@string/mon_label"
	    	android:gravity="center"
    	/>
    	<Button 
	        android:id="@id/mondayButton"
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
	        android:layout_below="@id/sundayButton"
	        android:layout_toRightOf="@id/mondayTV"
	        android:textColor="@color/BLACK"
	        android:textSize="20sp"
	        android:gravity="center"
	        android:layout_alignLeft="@id/wedsButton"
	    />
    	<TextView 
	    	android:id="@+id/tuesdayTV"
	    	android:layout_height="wrap_content"
	    	android:layout_width="wrap_content"
	    	android:layout_below="@id/mondayTV"
	    	android:layout_alignParentLeft="true"
	    	android:layout_alignBottom="@+id/tuesdayButton"
	    	android:textColor="@color/BLACK"
	    	android:textSize="20sp"
	    	android:text="@string/tues_label"
	    	android:gravity="center"
    	/>
	    <Button 
	        android:id="@id/tuesdayButton"
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
	        android:layout_below="@id/mondayButton"
	        android:layout_toRightOf="@id/tuesdayTV"
			android:gravity="center"
	        android:textColor="@color/BLACK"
	        android:textSize="20sp"
	        android:layout_alignLeft="@id/wedsButton"
	        />
	    <TextView 
	    	android:id="@+id/wedsTV"
	    	android:layout_height="wrap_content"
	    	android:layout_width="wrap_content"
	    	android:layout_below="@id/tuesdayTV"
	    	android:layout_alignParentLeft="true"
	    	android:layout_alignBottom="@id/wedsButton"
	    	android:textColor="@color/BLACK"
	    	android:textSize="20sp"
	    	android:text="@string/weds_label"
	    	android:gravity="center"
    	/>
	    <Button 
	        android:id="@id/wedsButton"
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
	        android:layout_below="@id/tuesdayButton"
	        android:layout_toRightOf="@id/wedsTV"
			android:gravity="center"
	        android:textColor="@color/BLACK"
	        android:textSize="20sp"
	        android:layout_marginLeft="5dp"
	        />
	    <TextView 
	    	android:id="@+id/thursTV"
	    	android:layout_height="wrap_content"
	    	android:layout_width="wrap_content"
	    	android:layout_below="@id/wedsTV"
	    	android:layout_alignParentLeft="true"
	    	android:layout_alignBottom="@+id/thursButton"
	    	android:textColor="@color/BLACK"
	    	android:textSize="20sp"
	    	android:text="@string/thurs_label"
	    	android:gravity="center"
    	/>
	    <Button 
	        android:id="@id/thursButton"
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
	        android:layout_below="@id/wedsButton"
	        android:layout_toRightOf="@id/thursTV"
			android:gravity="center"
	        android:textColor="@color/BLACK"
	        android:textSize="20sp"
	        android:layout_alignLeft="@id/wedsButton"
	        />
	    <TextView 
	    	android:id="@+id/friTV"
	    	android:layout_height="wrap_content"
	    	android:layout_width="wrap_content"
	    	android:layout_below="@id/thursTV"
	    	android:layout_alignParentLeft="true"
	    	android:layout_alignBottom="@+id/friButton"
	    	android:textColor="@color/BLACK"
	    	android:textSize="20sp"
	    	android:text="@string/fri_label"
	    	android:gravity="center"
    	/>
	    <Button 
	        android:id="@id/friButton"
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
	        android:layout_below="@id/thursButton"
	        android:layout_toRightOf="@id/friTV"
			android:gravity="center"
	        android:textColor="@color/BLACK"
	        android:textSize="20sp"
	        android:layout_alignLeft="@id/wedsButton"
	        />
	    <TextView 
	    	android:id="@+id/satTV"
	    	android:layout_height="wrap_content"
	    	android:layout_width="wrap_content"
	    	android:layout_below="@id/friTV"
	    	android:layout_alignParentLeft="true"
	    	android:layout_alignBottom="@+id/satButton"
	    	android:textColor="@color/BLACK"
	    	android:textSize="20sp"
	    	android:text="@string/sat_label"
	    	android:gravity="center"
    	/>
	    <Button 
	        android:id="@id/satButton"
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
	        android:layout_below="@id/friButton"
	        android:layout_toRightOf="@id/satTV"
			android:gravity="center"
	        android:textColor="@color/BLACK"
	        android:textSize="20sp"
	        android:layout_alignLeft="@id/wedsButton"
	        />
    </RelativeLayout>
    <ImageView
	    android:id="@id/ue_logo"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:src="@drawable/ue_logo"
		android:layout_alignParentBottom="true"
		android:contentDescription="@string/logo_desc"
		/>
</RelativeLayout>