<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/WHITE"
    android:padding="8dp"
    >
    
	<TextView
		android:id="@+id/zoneTitle"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:textStyle="bold"
		android:textColor="@color/UE_LIGHT_BLUE"
		android:textSize="40sp"	
		android:layout_alignParentTop="true"
	/>
	<RelativeLayout 
	    android:id="@+id/infoLayout"
	    android:layout_width="fill_parent"
	    android:layout_height="match_parent"
	    android:gravity="center_vertical"
	    android:layout_below="@id/zoneTitle"
		android:layout_above="@+id/ue_logo"
	    >
	<TextView  
	    android:id="@+id/statusHeader"
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content" 
	    android:text="@string/status_header"
	    android:layout_gravity="left"
	    android:textStyle="bold"
	    android:textColor="@color/BLACK"
	    android:textSize="20sp"
	    android:layout_marginTop="12dp"
	    android:layout_alignParentTop="true"
	/>
	<TextView 
		android:id="@+id/currentTemp"
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content" 
	    android:textColor="@color/UE_LIGHT_BLUE"
	    android:textSize="35sp"
	    android:layout_margin="8dp"
	    android:layout_below="@id/statusHeader"
	/>
	<TextView 
	    android:id="@+id/HvacStatus"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/statusHeader"
	    android:layout_alignParentRight="true"
	    android:gravity="right"
	    android:textColor="@color/BLACK"
	    android:textSize="15sp"
	    android:layout_marginBottom="15dp"
	/>
	<TextView 
	    android:id="@+id/FanStatus"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/HvacStatus"
	    android:layout_alignParentRight="true"
	    android:gravity="right"
	    android:textColor="@color/BLACK"
	    android:textSize="15sp"
	/>
	<TextView  
	    android:id="@+id/settingsHeader"
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content" 
	    android:text="@string/settings_header"
	    android:layout_gravity="fill_vertical"
	    android:textStyle="bold"
	    android:textColor="@color/BLACK"
	    android:textSize="20sp"
	    android:layout_below="@id/currentTemp"
	/>
	<RelativeLayout 
	    android:id="@+id/targetTempLayout"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@id/currentTemp"
	    android:layout_below="@id/settingsHeader"
	    >
		<Button 
		    android:id="@+id/upButton"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_below="@id/settingsHeader"
		    android:layout_marginTop="8dp"
			android:layout_centerHorizontal="true"
		    android:background="@drawable/button_up_states"
		    />
		<TextView
		    android:id="@+id/targetTemp"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_below="@id/upButton"
		    android:layout_marginTop="3dp"
		    android:textColor="@color/BLACK"
		    android:textSize="17sp"
		    android:layout_centerHorizontal="true"
		    />
		<Button
		    android:id="@+id/downButton"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_below="@id/targetTemp"
		    android:layout_marginTop="3dp"
		    android:layout_centerHorizontal="true"
		    android:background="@drawable/button_down_states"
		    />
	</RelativeLayout>
	<RelativeLayout 
	    android:layout_toRightOf="@id/targetTempLayout"
	    android:layout_below="@id/settingsHeader"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_alignBottom="@id/targetTempLayout"
	    android:gravity="center_vertical"
	    >
		<RelativeLayout
		    android:id="@+id/holdLayout"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_centerVertical="true"
		    android:layout_alignLeft="@+id/opModeLayout"
		    android:layout_above="@id/opModeLayout"
		    android:layout_alignRight="@id/opModeLayout"
		    android:layout_marginBottom="8dp"
		    >
		    <TextView 
			    android:id="@+id/holdLabel"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_centerVertical="true"
			    android:textColor="@color/BLACK"
			    android:textSize="15sp"
			    android:text="@string/hold"
			    />
			<Switch
			    android:id="@+id/holdSwitch"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_centerVertical="true"
			    android:layout_alignParentRight="true"
		    	/>
			</RelativeLayout>
		<RelativeLayout
		    android:id="@id/opModeLayout"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignParentRight="true"
		    android:layout_centerVertical="true"
		    >
			<TextView 
			    android:id="@+id/opModeLabel"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_centerVertical="true"
			    android:gravity="center_horizontal"
			    android:textColor="@color/BLACK"
			    android:textSize="15sp"
			    android:text="@string/op_mode_header"
			/>
			<Button 
			    android:id="@+id/opModeButton"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_toRightOf="@id/opModeLabel"
			  	android:layout_marginLeft="3dp"
			/>
			</RelativeLayout>
			<RelativeLayout
			    android:id="@+id/fanModeLayout"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_centerVertical="true"
			    android:layout_alignLeft="@id/opModeLayout"
			    android:layout_below="@id/opModeLayout"
			    android:layout_alignRight="@id/opModeLayout"
			    >
				<TextView 
				    android:id="@+id/fanModeLabel"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_centerVertical="true"
				    android:textColor="@color/BLACK"
				    android:textSize="15sp"
				    android:text="@string/fan_mode_header"
				/>
				<Button 
				    android:id="@+id/fanModeButton"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_centerVertical="true"
				    android:layout_alignParentRight="true"
				/>
			</RelativeLayout>
	</RelativeLayout>
	</RelativeLayout>
	<ImageView
	    android:id="@id/ue_logo"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:src="@drawable/ue_logo"
		android:layout_alignParentBottom="true"
		android:layout_alignParentLeft="true"
		android:contentDescription="@string/logo_desc"
		/>
</RelativeLayout>